Refactor candidature management and database schema
- Removed "Doctorat" option from the education level selection in CandidaturePageComplete.
- Enhanced GestionCandidaturesComplete with new action buttons for managing candidature statuses (submit, validate, reject).
- Introduced helper functions to unwrap API responses for better data handling.
- Updated status handling to reflect backend enums for candidatures.
- Added rejection dialog for providing reasons when rejecting a candidature.
- Modified database schema: changed gender enum values to 'Masculin' and 'Feminin', made candidature_id nullable in Document table, and added cin_temp for document pre-upload.
- Implemented new tables for user-center relationships, parameters, permissions, roles, results, and document audit with foreign key constraints.
- Added triggers for auditing document actions (insert, update, delete).
- Bootstrap permissions and parameters for role management.