@@ -13,13 +13,14 @@ import com.example.candidatureplus.service.GestionnaireService;
 import com.example.candidatureplus.service.StatistiquesService;
 import com.example.candidatureplus.service.CandidatureService;
 import com.example.candidatureplus.service.LogActionService;
+import com.example.candidatureplus.entity.Utilisateur;
 import lombok.RequiredArgsConstructor;
-
 import jakarta.servlet.http.HttpSession;
 import java.util.List;
 import java.util.Optional;
 import java.util.Map;
 import java.util.HashMap;
+import com.example.candidatureplus.dto.ApiResponse; // added
 
 @RestController
 @RequestMapping("/api/gestionnaire")
@@ -36,7 +37,7 @@ public class GestionnaireController {
      * Récupérer toutes les candidatures avec filtres et pagination
      */
     @GetMapping("/candidatures")
-    public ResponseEntity<List<CandidatureSimpleDto>> getAllCandidatures(
+    public ResponseEntity<ApiResponse<List<CandidatureSimpleDto>>> getAllCandidatures(
             @RequestParam(defaultValue = "0") int page,
             @RequestParam(defaultValue = "10") int size,
             @RequestParam(required = false) Long concoursId,
@@ -47,23 +48,22 @@ public class GestionnaireController {
 
         // Vérifier l'authentification
         Integer userId = (Integer) session.getAttribute("userId");
-        if (userId == null) {
-            return ResponseEntity.status(401).build();
-        }
-
+        if (userId == null)
+            return ResponseEntity.status(401).body(ApiResponse.error("Non authentifié"));
+        Utilisateur user = (Utilisateur) session.getAttribute("utilisateur");
         try {
+            List<CandidatureSimpleDto> candidatures;
             if (concoursId != null || specialiteId != null || centreId != null || statut != null) {
-                List<CandidatureSimpleDto> candidatures = gestionnaireService.getCandidaturesByFilters(
-                        concoursId, specialiteId, centreId, statut);
-                return ResponseEntity.ok(candidatures);
+                candidatures = gestionnaireService.getCandidaturesByFiltersForUser(user, concoursId, specialiteId,
+                        centreId, statut);
             } else {
                 Pageable pageable = PageRequest.of(page, size);
-                Page<CandidatureSimpleDto> candidatures = gestionnaireService.getAllCandidatures(pageable);
-                return ResponseEntity.ok(candidatures.getContent());
+                Page<CandidatureSimpleDto> pageResult = gestionnaireService.getAllCandidaturesFiltered(user, pageable);
+                candidatures = pageResult.getContent();
             }
+            return ResponseEntity.ok(ApiResponse.ok(candidatures));
         } catch (Exception e) {
-            e.printStackTrace();
-            return ResponseEntity.badRequest().build();
+            return ResponseEntity.badRequest().body(ApiResponse.error(e.getMessage()));
         }
     }
 
@@ -71,19 +71,17 @@ public class GestionnaireController {
      * Récupérer les détails d'une candidature
      */
     @GetMapping("/candidatures/{id}")
-    public ResponseEntity<CandidatureSimpleDto> getCandidatureDetails(@PathVariable Integer id, HttpSession session) {
+    public ResponseEntity<ApiResponse<CandidatureSimpleDto>> getCandidatureDetails(@PathVariable Integer id,
+            HttpSession session) {
         Integer userId = (Integer) session.getAttribute("userId");
-        if (userId == null) {
-            return ResponseEntity.status(401).build();
-        }
-
+        if (userId == null)
+            return ResponseEntity.status(401).body(ApiResponse.error("Non authentifié"));
         try {
             Optional<CandidatureSimpleDto> candidature = gestionnaireService.getCandidatureDetails(id);
-            return candidature.map(ResponseEntity::ok)
-                    .orElse(ResponseEntity.notFound().build());
+            return candidature.map(c -> ResponseEntity.ok(ApiResponse.ok(c)))
+                    .orElse(ResponseEntity.status(404).body(ApiResponse.error("Candidature non trouvée")));
         } catch (Exception e) {
-            e.printStackTrace();
-            return ResponseEntity.badRequest().build();
+            return ResponseEntity.badRequest().body(ApiResponse.error(e.getMessage()));
         }
     }
 
@@ -93,20 +91,15 @@ public class GestionnaireController {
     @GetMapping("/candidatures/{id}/cv")
     public ResponseEntity<byte[]> downloadCV(@PathVariable Integer id, HttpSession session) {
         Integer userId = (Integer) session.getAttribute("userId");
-        if (userId == null) {
+        if (userId == null)
             return ResponseEntity.status(401).build();
-        }
-
         try {
             byte[] cvData = gestionnaireService.getCandidatureCV(id);
             String contentType = gestionnaireService.getCandidatureCVType(id);
-
-            return ResponseEntity.ok()
-                    .contentType(MediaType.parseMediaType(contentType))
+            return ResponseEntity.ok().contentType(MediaType.parseMediaType(contentType))
                     .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"cv_candidature_" + id + ".pdf\"")
                     .body(cvData);
         } catch (Exception e) {
-            e.printStackTrace();
             return ResponseEntity.notFound().build();
         }
     }
@@ -114,49 +107,38 @@ public class GestionnaireController {
     /**
      * Mettre à jour le statut d'une candidature
      */
-    @PutMapping("/candidatures/{id}/statut")
-    public ResponseEntity<Map<String, String>> updateStatut(@PathVariable Integer id,
-            @RequestBody Map<String, String> statutData,
-            HttpSession session) {
+    @PutMapping("/candidatures/{id}/action")
+    public ResponseEntity<ApiResponse<Map<String, Object>>> actionCandidature(@PathVariable Integer id,
+            @RequestBody Map<String, String> body, HttpSession session) {
         Integer userId = (Integer) session.getAttribute("userId");
-        if (userId == null) {
-            return ResponseEntity.status(401).build();
-        }
-
+        if (userId == null)
+            return ResponseEntity.status(401).body(ApiResponse.error("Non authentifié"));
+        String action = body.getOrDefault("action", "");
+        String motif = body.get("motif");
+        Map<String, Object> resp = new HashMap<>();
         try {
-            String nouveauStatut = statutData.get("statut");
-            String motif = statutData.get("motif");
-
-            Map<String, String> response = new HashMap<>();
-
-            switch (nouveauStatut) {
-                case "En_Cours_Validation":
+            switch (action) {
+                case "en_cours" -> {
                     candidatureService.marquerEnCoursValidation(id, userId);
-                    response.put("message", "Candidature marquée en cours de validation");
-                    break;
-                case "Validee":
+                    resp.put("message", "Marquée en cours");
+                }
+                case "valider" -> {
                     candidatureService.validerCandidature(id, userId);
-                    response.put("message", "Candidature validée avec succès");
-                    break;
-                case "Rejetee":
-                    if (motif == null || motif.trim().isEmpty()) {
-                        response.put("error", "Le motif de rejet est obligatoire");
-                        return ResponseEntity.badRequest().body(response);
-                    }
+                    resp.put("message", "Validée");
+                }
+                case "rejeter" -> {
+                    if (motif == null || motif.isBlank())
+                        return ResponseEntity.badRequest().body(ApiResponse.error("Motif requis"));
                     candidatureService.rejeterCandidature(id, motif, userId);
-                    response.put("message", "Candidature rejetée");
-                    break;
-                default:
-                    response.put("error", "Statut non reconnu");
-                    return ResponseEntity.badRequest().body(response);
+                    resp.put("message", "Rejetée");
+                }
+                default -> {
+                    return ResponseEntity.badRequest().body(ApiResponse.error("Action inconnue"));
+                }
             }
-
-            return ResponseEntity.ok(response);
+            return ResponseEntity.ok(ApiResponse.ok(resp));
         } catch (Exception e) {
-            e.printStackTrace();
-            Map<String, String> error = new HashMap<>();
-            error.put("error", "Erreur lors de la mise à jour: " + e.getMessage());
-            return ResponseEntity.badRequest().body(error);
+            return ResponseEntity.badRequest().body(ApiResponse.error(e.getMessage()));
         }
     }
 
@@ -164,18 +146,14 @@ public class GestionnaireController {
      * Récupérer les statistiques générales
      */
     @GetMapping("/statistiques")
-    public ResponseEntity<StatistiquesDto> getStatistiques(HttpSession session) {
+    public ResponseEntity<ApiResponse<StatistiquesDto>> getStatistiques(HttpSession session) {
         Integer userId = (Integer) session.getAttribute("userId");
-        if (userId == null) {
-            return ResponseEntity.status(401).build();
-        }
-
+        if (userId == null)
+            return ResponseEntity.status(401).body(ApiResponse.error("Non authentifié"));
         try {
-            StatistiquesDto stats = statistiquesService.getStatistiquesGenerales();
-            return ResponseEntity.ok(stats);
+            return ResponseEntity.ok(ApiResponse.ok(statistiquesService.getStatistiquesGenerales()));
         } catch (Exception e) {
-            e.printStackTrace();
-            return ResponseEntity.badRequest().build();
+            return ResponseEntity.badRequest().body(ApiResponse.error(e.getMessage()));
         }
     }
 
@@ -183,18 +161,15 @@ public class GestionnaireController {
      * Récupérer les statistiques par statut
      */
     @GetMapping("/statistiques/statuts")
-    public ResponseEntity<List<StatistiquesDto.StatutCount>> getStatistiquesParStatut(HttpSession session) {
+    public ResponseEntity<ApiResponse<List<StatistiquesDto.StatutCount>>> getStatistiquesParStatut(
+            HttpSession session) {
         Integer userId = (Integer) session.getAttribute("userId");
-        if (userId == null) {
-            return ResponseEntity.status(401).build();
-        }
-
+        if (userId == null)
+            return ResponseEntity.status(401).body(ApiResponse.error("Non authentifié"));
         try {
-            List<StatistiquesDto.StatutCount> stats = statistiquesService.getStatistiquesParStatut();
-            return ResponseEntity.ok(stats);
+            return ResponseEntity.ok(ApiResponse.ok(statistiquesService.getStatistiquesParStatut()));
         } catch (Exception e) {
-            e.printStackTrace();
-            return ResponseEntity.badRequest().build();
+            return ResponseEntity.badRequest().body(ApiResponse.error(e.getMessage()));
         }
     }
 
@@ -202,18 +177,15 @@ public class GestionnaireController {
      * Récupérer les statistiques par concours
      */
     @GetMapping("/statistiques/concours")
-    public ResponseEntity<List<StatistiquesDto.ConcoursCount>> getStatistiquesParConcours(HttpSession session) {
+    public ResponseEntity<ApiResponse<List<StatistiquesDto.ConcoursCount>>> getStatistiquesParConcours(
+            HttpSession session) {
         Integer userId = (Integer) session.getAttribute("userId");
-        if (userId == null) {
-            return ResponseEntity.status(401).build();
-        }
-
+        if (userId == null)
+            return ResponseEntity.status(401).body(ApiResponse.error("Non authentifié"));
         try {
-            List<StatistiquesDto.ConcoursCount> stats = statistiquesService.getStatistiquesParConcours();
-            return ResponseEntity.ok(stats);
+            return ResponseEntity.ok(ApiResponse.ok(statistiquesService.getStatistiquesParConcours()));
         } catch (Exception e) {
-            e.printStackTrace();
-            return ResponseEntity.badRequest().build();
+            return ResponseEntity.badRequest().body(ApiResponse.error(e.getMessage()));
         }
     }
 
@@ -221,18 +193,15 @@ public class GestionnaireController {
      * Récupérer les centres les plus populaires
      */
     @GetMapping("/statistiques/centres-populaires")
-    public ResponseEntity<List<StatistiquesDto.CentrePopulaire>> getCentresPopulaires(HttpSession session) {
+    public ResponseEntity<ApiResponse<List<StatistiquesDto.CentrePopulaire>>> getCentresPopulaires(
+            HttpSession session) {
         Integer userId = (Integer) session.getAttribute("userId");
-        if (userId == null) {
-            return ResponseEntity.status(401).build();
-        }
-
+        if (userId == null)
+            return ResponseEntity.status(401).body(ApiResponse.error("Non authentifié"));
         try {
-            List<StatistiquesDto.CentrePopulaire> centres = statistiquesService.getCentresPopulaires();
-            return ResponseEntity.ok(centres);
+            return ResponseEntity.ok(ApiResponse.ok(statistiquesService.getCentresPopulaires()));
         } catch (Exception e) {
-            e.printStackTrace();
-            return ResponseEntity.badRequest().build();
+            return ResponseEntity.badRequest().body(ApiResponse.error(e.getMessage()));
         }
     }
 
@@ -241,32 +210,23 @@ public class GestionnaireController {
      */
     @GetMapping("/export/candidatures")
     public ResponseEntity<byte[]> exportCandidatures(@RequestParam String format,
-            @RequestParam(required = false) Long concoursId,
-            @RequestParam(required = false) String statut,
+            @RequestParam(required = false) Long concoursId, @RequestParam(required = false) String statut,
             HttpSession session) {
         Integer userId = (Integer) session.getAttribute("userId");
-        if (userId == null) {
+        if (userId == null)
             return ResponseEntity.status(401).build();
-        }
-
         try {
-            // Pour l'instant, retour d'un message simple
-            // TODO: Implémenter l'export réel
             String content = "Export des candidatures en cours de développement";
-
             if ("csv".equalsIgnoreCase(format)) {
-                return ResponseEntity.ok()
-                        .contentType(MediaType.parseMediaType("text/csv"))
+                return ResponseEntity.ok().contentType(MediaType.parseMediaType("text/csv"))
                         .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"candidatures.csv\"")
                         .body(content.getBytes());
             } else {
-                return ResponseEntity.ok()
-                        .contentType(MediaType.parseMediaType("application/vnd.ms-excel"))
+                return ResponseEntity.ok().contentType(MediaType.parseMediaType("application/vnd.ms-excel"))
                         .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"candidatures.xlsx\"")
                         .body(content.getBytes());
             }
         } catch (Exception e) {
-            e.printStackTrace();
             return ResponseEntity.badRequest().build();
         }
     }
@@ -275,22 +235,17 @@ public class GestionnaireController {
      * Récupérer les candidatures en attente pour un gestionnaire
      */
     @GetMapping("/candidatures/en-attente")
-    public ResponseEntity<List<CandidatureSimpleDto>> getCandidaturesEnAttente(
-            @RequestParam(required = false) Integer centreId,
-            HttpSession session) {
+    public ResponseEntity<ApiResponse<List<CandidatureSimpleDto>>> getCandidaturesEnAttente(
+            @RequestParam(required = false) Integer centreId, HttpSession session) {
         Integer userId = (Integer) session.getAttribute("userId");
-        if (userId == null) {
-            return ResponseEntity.status(401).build();
-        }
-
+        if (userId == null)
+            return ResponseEntity.status(401).body(ApiResponse.error("Non authentifié"));
         try {
-            // Si pas de centre spécifié, utiliser le centre du gestionnaire ou tous
-            List<CandidatureSimpleDto> candidatures = gestionnaireService.getCandidaturesByFilters(
-                    null, null, centreId != null ? centreId.longValue() : null, "Soumise");
-            return ResponseEntity.ok(candidatures);
+            List<CandidatureSimpleDto> candidatures = gestionnaireService.getCandidaturesByFilters(null, null,
+                    centreId != null ? centreId.longValue() : null, "Soumise");
+            return ResponseEntity.ok(ApiResponse.ok(candidatures));
         } catch (Exception e) {
-            e.printStackTrace();
-            return ResponseEntity.badRequest().build();
+            return ResponseEntity.badRequest().body(ApiResponse.error(e.getMessage()));
         }
     }
 
@@ -298,62 +253,50 @@ public class GestionnaireController {
      * Traitement en lot des candidatures
      */
     @PostMapping("/candidatures/traitement-lot")
-    public ResponseEntity<Map<String, Object>> traitementLot(@RequestBody Map<String, Object> traitementData,
-            HttpSession session) {
+    public ResponseEntity<ApiResponse<Map<String, Object>>> traitementLot(
+            @RequestBody Map<String, Object> traitementData, HttpSession session) {
         Integer userId = (Integer) session.getAttribute("userId");
-        if (userId == null) {
-            return ResponseEntity.status(401).build();
-        }
-
+        if (userId == null)
+            return ResponseEntity.status(401).body(ApiResponse.error("Non authentifié"));
         try {
             @SuppressWarnings("unchecked")
             List<Integer> candidatureIds = (List<Integer>) traitementData.get("candidatureIds");
             String action = (String) traitementData.get("action");
             String motif = (String) traitementData.get("motif");
-
-            Map<String, Object> response = new HashMap<>();
             int succes = 0;
             int echecs = 0;
-
             for (Integer candidatureId : candidatureIds) {
                 try {
                     switch (action) {
-                        case "valider":
+                        case "valider" -> {
                             candidatureService.validerCandidature(candidatureId, userId);
                             succes++;
-                            break;
-                        case "rejeter":
+                        }
+                        case "rejeter" -> {
                             candidatureService.rejeterCandidature(candidatureId, motif, userId);
                             succes++;
-                            break;
-                        case "en_cours":
+                        }
+                        case "en_cours" -> {
                             candidatureService.marquerEnCoursValidation(candidatureId, userId);
                             succes++;
-                            break;
-                        default:
+                        }
+                        default -> {
                             echecs++;
+                        }
                     }
-                } catch (Exception e) {
+                } catch (Exception ex) {
                     echecs++;
                 }
             }
-
+            Map<String, Object> response = new HashMap<>();
             response.put("succes", succes);
             response.put("echecs", echecs);
             response.put("total", candidatureIds.size());
-
-            if (echecs == 0) {
-                response.put("message", "Toutes les candidatures ont été traitées avec succès");
-            } else {
-                response.put("message", succes + " candidatures traitées, " + echecs + " échecs");
-            }
-
-            return ResponseEntity.ok(response);
+            response.put("message", echecs == 0 ? "Toutes les candidatures ont été traitées avec succès"
+                    : succes + " candidatures traitées, " + echecs + " échecs");
+            return ResponseEntity.ok(ApiResponse.ok(response));
         } catch (Exception e) {
-            e.printStackTrace();
-            Map<String, Object> error = new HashMap<>();
-            error.put("error", "Erreur lors du traitement en lot: " + e.getMessage());
-            return ResponseEntity.badRequest().body(error);
+            return ResponseEntity.badRequest().body(ApiResponse.error(e.getMessage()));
         }
     }
 
@@ -361,15 +304,12 @@ public class GestionnaireController {
      * Recherche avancée de candidatures
      */
     @PostMapping("/candidatures/recherche")
-    public ResponseEntity<List<CandidatureSimpleDto>> rechercheAvancee(@RequestBody Map<String, Object> criteres,
-            HttpSession session) {
+    public ResponseEntity<ApiResponse<List<CandidatureSimpleDto>>> rechercheAvancee(
+            @RequestBody Map<String, Object> criteres, HttpSession session) {
         Integer userId = (Integer) session.getAttribute("userId");
-        if (userId == null) {
-            return ResponseEntity.status(401).build();
-        }
-
+        if (userId == null)
+            return ResponseEntity.status(401).body(ApiResponse.error("Non authentifié"));
         try {
-            // Extraction des critères de recherche
             Long concoursId = criteres.get("concoursId") != null ? Long.valueOf(criteres.get("concoursId").toString())
                     : null;
             Long specialiteId = criteres.get("specialiteId") != null
@@ -377,14 +317,11 @@ public class GestionnaireController {
                     : null;
             Long centreId = criteres.get("centreId") != null ? Long.valueOf(criteres.get("centreId").toString()) : null;
             String statut = (String) criteres.get("statut");
-
-            List<CandidatureSimpleDto> candidatures = gestionnaireService.getCandidaturesByFilters(
-                    concoursId, specialiteId, centreId, statut);
-
-            return ResponseEntity.ok(candidatures);
+            List<CandidatureSimpleDto> candidatures = gestionnaireService.getCandidaturesByFilters(concoursId,
+                    specialiteId, centreId, statut);
+            return ResponseEntity.ok(ApiResponse.ok(candidatures));
         } catch (Exception e) {
-            e.printStackTrace();
-            return ResponseEntity.badRequest().build();
+            return ResponseEntity.badRequest().body(ApiResponse.error(e.getMessage()));
         }
     }
 
@@ -392,33 +329,23 @@ public class GestionnaireController {
      * Tableau de bord du gestionnaire
      */
     @GetMapping("/dashboard")
-    public ResponseEntity<Map<String, Object>> getDashboard(HttpSession session) {
+    public ResponseEntity<ApiResponse<Map<String, Object>>> getDashboard(HttpSession session) {
         Integer userId = (Integer) session.getAttribute("userId");
-        if (userId == null) {
-            return ResponseEntity.status(401).build();
-        }
-
+        if (userId == null)
+            return ResponseEntity.status(401).body(ApiResponse.error("Non authentifié"));
         try {
             Map<String, Object> dashboard = new HashMap<>();
-
-            // Statistiques rapides
             StatistiquesDto stats = statistiquesService.getStatistiquesGenerales();
             dashboard.put("statistiques", stats);
-
-            // Candidatures en attente
-            List<CandidatureSimpleDto> enAttente = gestionnaireService.getCandidaturesByFilters(
-                    null, null, null, "Soumise");
+            List<CandidatureSimpleDto> enAttente = gestionnaireService.getCandidaturesByFilters(null, null, null,
+                    "Soumise");
             dashboard.put("candidaturesEnAttente", enAttente.size());
-
-            // Candidatures à traiter aujourd'hui
-            List<CandidatureSimpleDto> enCours = gestionnaireService.getCandidaturesByFilters(
-                    null, null, null, "En_Cours_Validation");
+            List<CandidatureSimpleDto> enCours = gestionnaireService.getCandidaturesByFilters(null, null, null,
+                    "En_Cours_Validation");
             dashboard.put("candidaturesEnCours", enCours.size());
-
-            return ResponseEntity.ok(dashboard);
+            return ResponseEntity.ok(ApiResponse.ok(dashboard));
         } catch (Exception e) {
-            e.printStackTrace();
-            return ResponseEntity.badRequest().build();
+            return ResponseEntity.badRequest().body(ApiResponse.error(e.getMessage()));
         }
     }
 }
